@@ -2,10 +2,12 @@
 Things that really need to be done before code-freeze
 
 Add graphical hints for the mouse support in gnobots.
+Use better icons for teleport etc.
 Click to move for aisleriot.
 Mahjongg single pile shuffle problem.
 Better drag and drop support for gnometris.
 Threading support for freecell hint generation.
+SVG card deck for aisleriot.
 Scores back-end.
 
 
